[package]
name = "luola2"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-or-later"

[profile.release]
#debug = true

[features]
static = [
	"mlua/vendored",
	"sdl3-sys/build-from-source-static",
	"sdl3-image-sys/build-from-source-static",
	"sdl3-ttf-sys/build-static-vendored",
]

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
either = "1.15.0"
env_logger = { version = "0.11.8", default-features = false }
fastrand = "2.3.0"
log = { version = "0.4.28", features = ["std"] }
mlua = { version = "0.11.4", features = ["serde", "lua54", "anyhow"] }
sdl3-image-sys = { version = "0.2.0"  }
sdl3-main = "0.5.4"
sdl3-sys = { version = "0.5.7"  }
sdl3-ttf-sys = { version = "0.2.0" }
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
toml = { version = "0.9.8", default-features=false, features = ["std", "serde", "parse", "display"] }

[dev-dependencies]
itertools = "0.14.0"

[build-dependencies]
winresource = "0.1.27"
